<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/ivChooseMyThing"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/default_user" />

    <com.automated.taxinow.component.MyFontEdittextView
        android:id="@+id/etThingName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_name"
        android:singleLine="true" >

        <requestFocus />
    </com.automated.taxinow.component.MyFontEdittextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin" >

        <com.automated.taxinow.component.MyFontEdittextView
            android:id="@+id/etThingAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_desc1"
            android:inputType="number"
            android:singleLine="true" />

        <com.automated.taxinow.component.MyFontEdittextView
            android:id="@+id/etThingType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_desc2"
            android:singleLine="true" />
    </LinearLayout>

    <com.automated.taxinow.component.MyFontEdittextView
        android:id="@+id/etNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_comment"
        android:singleLine="true" />

    <com.automated.taxinow.component.MyFontButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ub__button_black"
        android:gravity="center"
        android:text="@string/text_next"
        android:textColor="@color/white" />

</LinearLayout>