<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginLeft="@dimen/dimen_fp_margin"
        android:layout_marginRight="@dimen/dimen_fp_margin"
        android:layout_weight="1"
        android:orientation="vertical" >

        <com.automated.taxinow.component.MyFontTextView
            android:id="@+id/etForgotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_forgot_password"
            android:textColor="@color/color_app_gray"
            android:textSize="@dimen/fp_font_size" />

        <com.automated.taxinow.component.MyFontEdittextView
            android:id="@+id/etForgetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/dimen_fp_margin_top"
            android:background="@drawable/bg_edittext"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_app_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRegisterSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <com.automated.taxinow.component.MyFontButton
            android:id="@+id/tvForgetSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_pickup"
            android:gravity="center"
            android:text="@string/text_submit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>